force-app/main/default/objects/Lead/fields/Bairro__c.field-meta.xml
<CustomField>
    <fullName>Bairro__c</fullName>
    <description>Bairro do lead</description>
    <label>Bairro</label>
    <length>30</length>
    <type>Text</type>
</CustomField>