force-app/main/default/objects/Lead/fields/CanalAtendimento__c.field-meta.xml
<CustomField>
    <fullName>CanalAtendimento__c</fullName>
    <description>Canal de Atendimento</description>
    <label>Canal de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ListaCanalAtendimento</valueSetName>
    </valueSet>
</CustomField>