force-app/main/default/objects/Lead/fields/CargoResponsavel__c.field-meta.xml
<CustomField>
    <fullName>CargoResponsavel__c</fullName>
    <description>Cargo do Responsável</description>
    <label>Cargo Responsável</label>
    <length>40</length>
    <type>Text</type>
</CustomField>