force-app/main/default/objects/Lead/fields/CNPJFormatado__c.field-meta.xml
<CustomField>
    <fullName>CNPJFormatado__c</fullName>
    <description>Formula para visualizar CNPJ Formatado!</description>
    <formula>IF(
    LEN(CNPJ__c) = 14,
    LEFT(CNPJ__c, 2) &amp; &quot;.&quot; &amp; MID(CNPJ__c, 3, 3) &amp; &quot;.&quot; &amp; MID(CNPJ__c, 6, 3) &amp; &quot;/&quot; &amp; MID(CNPJ__c, 9, 4) &amp; &quot;-&quot; &amp; RIGHT(CNPJ__c, 2),
    CNPJ__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ Formatado</label>
    <type>Text</type>
</CustomField>