force-app/main/default/objects/Lead/fields/ConfiguracaoDeSLA__c.field-meta.xml
<CustomField>
    <fullName>ConfiguracaoDeSLA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuração de SLA</label>
    <referenceTo>ConfiguracoesDeNegocio__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>