force-app/main/default/objects/Lead/fields/ControleCadencia__c.field-meta.xml
<CustomField>
    <fullName>ControleCadencia__c</fullName>
    <label>Controle de Cadência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nenhuma tentativa efetuada</fullName>
                <default>true</default>
                <label>Nenhuma tentativa efetuada</label>
            </value>
            <value>
                <fullName>1° Tentativa</fullName>
            </value>
            <value>
                <fullName>2° Tentativa</fullName>
            </value>
            <value>
                <fullName>3° Tentativa</fullName>
            </value>
            <value>
                <fullName>4° Tentativa</fullName>
            </value>
            <value>
                <fullName>5° Tentativa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>