force-app/main/default/objects/Lead/fields/Corretor__c.field-meta.xml
<CustomField>
    <fullName>Corretor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corretor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Corretor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>