force-app/main/default/objects/Lead/fields/DataHoraAtualizacaoFase__c.field-meta.xml
<CustomField>
    <fullName>DataHoraAtualizacaoFase__c</fullName>
    <label>Data/Hora Atualização de Fase</label>
    <type>DateTime</type>
</CustomField>