force-app/main/default/objects/Lead/fields/DataHoraVencimento__c.field-meta.xml
<CustomField>
    <fullName>DataHoraVencimento__c</fullName>
    <label>Tempo limite para perda</label>
    <type>DateTime</type>
</CustomField>