force-app/main/default/objects/Lead/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <description>Data de Nascimento do Lead</description>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>