force-app/main/default/objects/Lead/fields/DataPrimeiraInteracao__c.field-meta.xml
<CustomField>
    <fullName>DataPrimeiraInteracao__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data da Primeira Interação</label>
    <type>DateTime</type>
</CustomField>