force-app/main/default/objects/Lead/fields/DataUltimaReiteracao__c.field-meta.xml
<CustomField>
    <fullName>DataUltimaReiteracao__c</fullName>
    <label>Data Ultima Reiteração</label>
    <type>DateTime</type>
</CustomField>