force-app/main/default/objects/Lead/fields/DDICelular__c.field-meta.xml
<CustomField>
    <fullName>DDICelular__c</fullName>
    <label>DDI Celular</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ListaPaisesDDI</valueSetName>
    </valueSet>
</CustomField>