force-app/main/default/objects/Lead/fields/Desejorecebernovidadesmeuemail__c.field-meta.xml
<CustomField>
    <fullName>Desejorecebernovidadesmeuemail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desejo receber novidades no meu e-mail</label>
    <type>Checkbox</type>
</CustomField>