force-app/main/default/objects/Lead/fields/DesejorecebernovidadesWhatsApp__c.field-meta.xml
<CustomField>
    <fullName>DesejorecebernovidadesWhatsApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desejo receber novidades no meu WhatsApp</label>
    <type>Checkbox</type>
</CustomField>