force-app/main/default/objects/Lead/fields/DetalhesMotivoPerda__c.field-meta.xml
<CustomField>
    <fullName>DetalhesMotivoPerda__c</fullName>
    <label>Detalhes do Motivo da Perda</label>
    <type>TextArea</type>
</CustomField>