force-app/main/default/objects/Lead/fields/DiaSemana__c.field-meta.xml
<CustomField>
    <fullName>DiaSemana__c</fullName>
    <formula>CASE( WEEKDAY(DATEVALUE(DataPrimeiraInteracao__c)), 1, &quot;Domingo&quot;, 2, &quot;Segunda-Feira&quot;, 3, &quot;Terça-Feira&quot;, 4, &quot;Quarta-Feira&quot;, 5, &quot;Quinta-Feira&quot;, 6, &quot;Sexta-Feira&quot;, 7, &quot;Sábado&quot;,&quot;Error&quot;)</formula>
    <label>Dia da Semana</label>
    <type>Text</type>
</CustomField>