force-app/main/default/objects/Lead/fields/Dominio__c.field-meta.xml
<CustomField>
    <fullName>Dominio__c</fullName>
    <inlineHelpText>Identifica o domínio da entrada do Lead Digital</inlineHelpText>
    <label>Domínio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>