force-app/main/default/objects/Lead/fields/Empreendimento__c.field-meta.xml
<CustomField>
    <fullName>Empreendimento__c</fullName>
    <description>Empreendimento Interessado</description>
    <label>Empreendimento</label>
    <length>40</length>
    <type>Text</type>
</CustomField>