force-app/main/default/objects/Lead/fields/EmpreendimentoAtual__c.field-meta.xml
<CustomField>
    <fullName>EmpreendimentoAtual__c</fullName>
    <formula>EmpreendimentoInteresse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Empreendimento Atual</label>
    <type>Text</type>
</CustomField>