force-app/main/default/objects/Lead/fields/FaixaInvestimento__c.field-meta.xml
<CustomField>
    <fullName>FaixaInvestimento__c</fullName>
    <label>Faixa de Investimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R$ 300 Mil a R$ 999 Mil</fullName>
            </value>
            <value>
                <fullName>R$ 1 Milhão a R$ 1,9 Milhões</fullName>
            </value>
            <value>
                <fullName>R$ 2 Milhões a R$ 3,9 Milhões</fullName>
            </value>
            <value>
                <fullName>R$ 4 Milhões a R$ 5,9 Milhões</fullName>
            </value>
            <value>
                <fullName>Acima de R$ 6 Milhões</fullName>
            </value>
            <value>
                <fullName>Não definido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>