force-app/main/default/objects/Lead/fields/FormularioDaCampanha__c.field-meta.xml
<CustomField>
    <fullName>FormularioDaCampanha__c</fullName>
    <formula>FormularioDeCampanhaMapeamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formulário da Campanha</label>
    <type>Text</type>
</CustomField>