force-app/main/default/objects/Lead/fields/FormularioDeCampanhaMapeamento__c.field-meta.xml
<CustomField>
    <fullName>FormularioDeCampanhaMapeamento__c</fullName>
    <description>campo para mapeamento de formulario de leads vindo de anuncios Meta</description>
    <label>Formulario de Campanha Mapeamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>