force-app/main/default/objects/Lead/fields/Imobiliaria__c.field-meta.xml
<CustomField>
    <fullName>Imobiliaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imobiliária</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Imobiliária</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>