force-app/main/default/objects/Lead/fields/IndicaoPremiada__c.field-meta.xml
<CustomField>
    <fullName>IndicaoPremiada__c</fullName>
    <description>Indicação Premiada</description>
    <label>Indicação Premiada</label>
    <length>40</length>
    <type>Text</type>
</CustomField>