force-app/main/default/objects/Lead/fields/Indicarcorretorconfianca__c.field-meta.xml
<CustomField>
    <fullName>Indicarcorretorconfianca__c</fullName>
    <inlineHelpText>Informação recebida do Site ondo o cliente pode indicar um corretor.</inlineHelpText>
    <label>Indicar corretor de confiança</label>
    <length>255</length>
    <type>Text</type>
</CustomField>