force-app/main/default/objects/Lead/fields/isPJ__c.field-meta.xml
<CustomField>
    <fullName>isPJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>É PJ</label>
    <type>Checkbox</type>
</CustomField>