force-app/main/default/objects/Lead/fields/LeadNaoQuisVisitar__c.field-meta.xml
<CustomField>
    <fullName>LeadNaoQuisVisitar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead não quis visitar empreendimento</label>
    <type>Checkbox</type>
</CustomField>