force-app/main/default/objects/Lead/fields/MelhorHorarioParaContato__c.field-meta.xml
<CustomField>
    <fullName>MelhorHorarioParaContato__c</fullName>
    <label>Melhor Horário Para Contato</label>
    <type>Time</type>
</CustomField>