force-app/main/default/objects/Lead/fields/Mensagem__c.field-meta.xml
<CustomField>
    <fullName>Mensagem__c</fullName>
    <inlineHelpText>Mensagem registrada pelo cliente através do formulário do Site</inlineHelpText>
    <label>Mensagem</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>