force-app/main/default/objects/Lead/fields/MidiaAtual__c.field-meta.xml
<CustomField>
    <fullName>MidiaAtual__c</fullName>
    <label>Mídia Atual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Midia</valueSetName>
    </valueSet>
</CustomField>