force-app/main/default/objects/Lead/fields/MomentoCompra__c.field-meta.xml
<CustomField>
    <fullName>MomentoCompra__c</fullName>
    <label>Momento de Compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pronto para fazer uma proposta</fullName>
            </value>
            <value>
                <fullName>Avaliando opções de imóveis</fullName>
            </value>
            <value>
                <fullName>Apenas olhando</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>