force-app/main/default/objects/Lead/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo da visita não realizada</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadNaoQuisVisitar__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acima do valor procurado</fullName>
            </value>
            <value>
                <fullName>Não está na região</fullName>
            </value>
            <value>
                <fullName>Não tem interesse</fullName>
            </value>
            <value>
                <fullName>Imóvel não se enquadra na procura</fullName>
            </value>
            <value>
                <fullName>Não responde/atende</fullName>
            </value>
            <value>
                <fullName>Nenhum</fullName>
                <isActive>false</isActive>
                <label>Nenhum</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>