force-app/main/default/objects/Lead/fields/MotivoLeadPerdido__c.field-meta.xml
<CustomField>
    <fullName>MotivoLeadPerdido__c</fullName>
    <label>Motivo do Lead Perdido</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Final de Cadência</fullName>
            </value>
            <value>
                <fullName>Venda Não Concluída</fullName>
            </value>
            <value>
                <fullName>Comprou Outro Imóvel</fullName>
            </value>
            <value>
                <fullName>Lead Corretor</fullName>
            </value>
            <value>
                <fullName>Impossível Contactar</fullName>
            </value>
            <value>
                <fullName>Desistência</fullName>
            </value>
            <value>
                <fullName>Curioso.</fullName>
            </value>
            <value>
                <fullName>Lead Não Qualificado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>