force-app/main/default/objects/Lead/fields/MotivoNaoQualificado__c.field-meta.xml
<CustomField>
    <fullName>MotivoNaoQualificado__c</fullName>
    <label>Motivo Não Qualificado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renda Insuficiente</fullName>
            </value>
            <value>
                <fullName>Não Contatado</fullName>
            </value>
            <value>
                <fullName>Não se Adequa.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>