force-app/main/default/objects/Lead/fields/Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifica os leads que foram captados pelo Site e marcados para comunicações e Newsletter.</inlineHelpText>
    <label>Newsletter</label>
    <type>Checkbox</type>
</CustomField>