force-app/main/default/objects/Lead/fields/NomeProdutoTerceiros__c.field-meta.xml
<CustomField>
    <fullName>NomeProdutoTerceiros__c</fullName>
    <description>Indica a informação do produto de interesse do cliente capturado no Site e Mídias.</description>
    <inlineHelpText>Indica a informação do produto de interesse do cliente capturado no Site e Mídias.</inlineHelpText>
    <label>Nome do Produto Terceiros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>