force-app/main/default/objects/Lead/fields/PrimeiraOrigem__c.field-meta.xml
<CustomField>
    <fullName>PrimeiraOrigem__c</fullName>
    <label>Primeira Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>