force-app/main/default/objects/Lead/fields/PrimeiroEmpreendimento__c.field-meta.xml
<CustomField>
    <fullName>PrimeiroEmpreendimento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primeiro Empreendimento</label>
    <referenceTo>Empreendimento__c</referenceTo>
    <relationshipLabel>Leads (Primeiro Empreendimento)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>