force-app/main/default/objects/Lead/fields/Profissao__c.field-meta.xml
<CustomField>
    <fullName>Profissao__c</fullName>
    <description>Profissão do Lead</description>
    <label>Profissão</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ListaProfissao</valueSetName>
    </valueSet>
</CustomField>