force-app/main/default/objects/Lead/fields/QuantidadeDeDiasNaFaseAtual__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDeDiasNaFaseAtual__c</fullName>
    <formula>NOW() - DataHoraAtualizacaoFase__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade de Dias na Fase Atual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>