force-app/main/default/objects/Lead/fields/QuantidadeDeReiteracoes__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeDeReiteracoes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade de Reiterações</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>