force-app/main/default/objects/Lead/fields/RamoAtuacao__c.field-meta.xml
<CustomField>
    <fullName>RamoAtuacao__c</fullName>
    <description>Ramo de Atuação</description>
    <label>Ramo de Atuação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administracao</fullName>
                <label>Administração</label>
            </value>
            <value>
                <fullName>Agronegocio</fullName>
                <label>Agronegócio</label>
            </value>
            <value>
                <fullName>Direito</fullName>
            </value>
            <value>
                <fullName>EngenhariaEProducao</fullName>
                <label>Engenharia e Produção</label>
            </value>
            <value>
                <fullName>NegociosEServicos</fullName>
                <label>Negócios e Serviços</label>
            </value>
            <value>
                <fullName>SaudeEBemEstar</fullName>
                <label>Saúde e Bem Estar</label>
            </value>
            <value>
                <fullName>Tecnologia</fullName>
                <label>Técnologia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>