force-app/main/default/objects/Lead/fields/RecordTypeAtual__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeAtual__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Atual</label>
    <type>Text</type>
</CustomField>