force-app/main/default/objects/Lead/fields/RegiaoInteresse__c.field-meta.xml
<CustomField>
    <fullName>RegiaoInteresse__c</fullName>
    <inlineHelpText>Identifica a região de interesse do cliente dos Empreendimentos</inlineHelpText>
    <label>Região de Interesse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RegiaoInteresse</valueSetName>
    </valueSet>
</CustomField>