force-app/main/default/objects/Lead/fields/ResponsavelPeloLead__c.field-meta.xml
<CustomField>
    <fullName>ResponsavelPeloLead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável pelo Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>