force-app/main/default/objects/Lead/fields/SetorEmpresa__c.field-meta.xml
<CustomField>
    <fullName>SetorEmpresa__c</fullName>
    <inlineHelpText>Indica o setor da empresa que o Lead deseja falar com a J.A. Russi. Capturado através do formulário do site.</inlineHelpText>
    <label>Setor da Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>