force-app/main/default/objects/Lead/fields/StatusDoCliente__c.field-meta.xml
<CustomField>
    <fullName>StatusDoCliente__c</fullName>
    <label>Status do Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avaliando opções de imóveis.</fullName>
            </value>
            <value>
                <fullName>Apenas olhando.</fullName>
            </value>
            <value>
                <fullName>Pronto para fazer uma proposta.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>