force-app/main/default/objects/Lead/fields/Sub_Fases_de_Qualifica_o__c.field-meta.xml
<CustomField>
    <fullName>Sub_Fases_de_Qualifica_o__c</fullName>
    <description>Descreve a evolução do Lead dentro da fase de Qualificação.</description>
    <inlineHelpText>Um Lead estará apto a seguir para a fase de Interessado SQL, após o sucesso em uma realização de contato.</inlineHelpText>
    <label>Sub Fases de Qualificação</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1ª Tentativa</fullName>
            </value>
            <value>
                <fullName>2ª Tentativa</fullName>
            </value>
            <value>
                <fullName>3ª Tentativa</fullName>
            </value>
            <value>
                <fullName>Contato Realizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>