force-app/main/default/objects/Lead/fields/TelefoneFormatado__c.field-meta.xml
<CustomField>
    <fullName>TelefoneFormatado__c</fullName>
    <formula>IF(
				ISBLANK(Phone), 
				&quot;&quot;, 
				MID(
								TEXT(DDITelefone__c), 
								FIND(&quot;+&quot;, TEXT(DDITelefone__c)), 
								(LEN(TEXT(DDITelefone__c))-FIND(&quot;+&quot;, TEXT(DDITelefone__c)))) + 
				    IF (
								    ISBLANK(DDDTelefone__c),
												&quot; &quot;,
												&quot; (&quot;+DDDTelefone__c+&quot;) &quot;
								)
				    +  Phone)</formula>
    <label>Telefone Formatado</label>
    <type>Text</type>
</CustomField>