force-app/main/default/objects/Lead/fields/TelefoneSocio__c.field-meta.xml
<CustomField>
    <fullName>TelefoneSocio__c</fullName>
    <description>Telefone do Sócio</description>
    <label>Telefone Sócio</label>
    <length>11</length>
    <type>Text</type>
</CustomField>