force-app/main/default/objects/Lead/fields/TempoMinutosParaVencer__c.field-meta.xml
<CustomField>
    <fullName>TempoMinutosParaVencer__c</fullName>
    <formula>MAX((DataHoraVencimento__c - NOW()) * 24 * 60, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo Minutos Para Vencer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>