force-app/main/default/objects/Lead/fields/TotalDeAtividadesFaseAtual__c.field-meta.xml
<CustomField>
    <fullName>TotalDeAtividadesFaseAtual__c</fullName>
    <label>Total de Atividades da Fase Atual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>