force-app/main/default/objects/Lead/fields/Vencido__c.field-meta.xml
<CustomField>
    <fullName>Vencido__c</fullName>
    <formula>DataHoraVencimento__c &lt; NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vencido</label>
    <type>Checkbox</type>
</CustomField>