force-app/main/default/objects/Lead/fields/VoceEsta__c.field-meta.xml
<CustomField>
    <fullName>VoceEsta__c</fullName>
    <label>Você está:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pronto_para_fazer_uma_proposta.</fullName>
                <label>Pronto para fazer uma proposta.</label>
            </value>
            <value>
                <fullName>avaliando_opções_de_imóveis.</fullName>
                <label>Avaliando opções de imóveis.</label>
            </value>
            <value>
                <fullName>apenas_olhando.</fullName>
                <label>Apenas olhando.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>