force-app/main/default/objects/Lead/recordTypes/GoogleAds.recordType-meta.xml
<RecordType>
    <fullName>GoogleAds</fullName>
    <active>true</active>
    <businessProcess>Processo de Lead</businessProcess>
    <label>Formulário Ads</label>
</RecordType>