force-app/main/default/objects/Lead/recordTypes/PessoaJuridica.recordType-meta.xml
<RecordType>
    <fullName>PessoaJuridica</fullName>
    <active>true</active>
    <businessProcess>Processo de Lead</businessProcess>
    <label>Pessoa Jurídica</label>
</RecordType>