force-app/main/default/objects/Lead/validationRules/CampanhaDesativada.validationRule-meta.xml
<ValidationRule>
    <fullName>CampanhaDesativada</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(Vencido__c),
    NOT(Campanha__r.IsActive)
)</errorConditionFormula>
    <errorMessage>Não é possível associar um Lead com a campanha desativada!</errorMessage>
</ValidationRule>